kubernetes/02-apps/03-media/04-jellyfin/01-ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: media
  name: jellyfin-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyfin.media.kalexlab.xyz`)
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: jellyfin-ingress-certificate-secret
